# robosim

./: .gitignore  .gitmodules  AGENTS.md  DESIGN.md  HABITAT_BACKEND_GUIDE.md  HABITAT_GPU_GUIDE.md  HABITAT_SIM_BACKEND_FEASIBILITY.md  MUJOCO_LOG.TXT  README.md  TODO.md  agent_orchestrator.py  environment.yml  move_habitat_camera.py  pyproject.toml  save_habitat_rgb.py  view_habitat_rgb.py
.github/: pull_request_template.md
agent/: README.md  main.py  requirements.txt
agent/config/: default.yaml
agent/src/: __init__.py  agent.py  config.py  llm.py  memory.py  multimodal.py
agent/src/extensions/: tts.py
agent/src/interfaces/: __init__.py  api.py  cli.py
agent/src/tools/: __init__.py  base.py  mcp_client.py  registry.py
agent/tests/: _stubs.py  run_tests.py  test_agent.py  test_api.py  test_mcp.py  test_memory.py  test_tools.py
control_stubs/: .gitignore
control_stubs/control_stubs/: common.proto  mobility_ai.proto  policy.proto  robot_core.proto  robot_data.proto  sensing.proto  simulation.proto
control_stubs/tools/: __init__.py  _common.py  as_local_tools.py  as_mcp_tools.py  client.py  data_recorder.py  joycon.py  policy_runner.py  scripted_collect.py  servo_keyboard.py  teleop.py
docs/: mujoco-openusd-feasibility.md  policy-diffusion-validation.md  scripted-collection.md
docs/superpowers/plans/: 2026-07-13-pybullet-backend.md  2026-07-13-pybullet-compiler-completion.md
drivers_sim/gazebo-11/assets/maps/: CMakeLists.txt  package.xml
drivers_sim/gazebo-11/assets/robots/: README.md
drivers_sim/gazebo-11/assets/robots/ipads/ipads_description/: CMakeLists.txt  package.xml
drivers_sim/gazebo-11/assets/robots/ipads/ipads_description/launch/: display.launch  gazebo.launch
drivers_sim/gazebo-11/assets/robots/ipads/ipads_description/meshes/convex/: left_link1.stl  left_link7.stl  right_link2.stl  right_link3.stl  right_link5.stl  right_link6.stl
drivers_sim/gazebo-11/assets/robots/ipads/ipads_description/urdf/: LZ2.0.SLDASM_v14.csv  LZ2.0.SLDASM_v14.urdf  ipads_desc.bak.urdf  ipads_desc.urdf
drivers_sim/gazebo-11/assets/worlds/: CMakeLists.txt  package.xml
drivers_sim/gazebo-11/common/: CMakeLists.txt  package.xml
drivers_sim/gazebo-11/common/include/robot_sim_common/: config.h  helpers.hpp
drivers_sim/gazebo-11/common/src/cpp/: helpers.cpp
drivers_sim/gazebo-11/common/src/robot_sim_common/: config.py
drivers_sim/gazebo-11/demos/: package.xml  setup.py
drivers_sim/gazebo-11/demos/demos/: init_pose.py
drivers_sim/mujoco/assets/: README.md
patches/: gravity_compensation.patch
robosim/: __init__.py  server.py
robosim/backends/: __init__.py
robosim/backends/gazebo/: backend.py
robosim/backends/habitat/: __init__.py  backend.py
robosim/backends/mujoco/: __init__.py  backend.py
robosim/backends/pybullet/: __init__.py  backend.py
robosim/core/: __init__.py  activity.py  backend.py  capabilities.py  csd.py  csd_compiler.py  csd_mujoco.py  openusd_csd.py  recorder.py
robosim/core/impl/: lerobot_io.py  policy_lerobot.py  recorder_lerobot.py
robosim/grpc_server/: __init__.py  mobility.py  policy_inference.py  robot_core.py  robot_data.py  sensing.py  simulation.py
robosim/navigation/: __init__.py  backend_client.py  drive.py  geometry.py  grid.py  inprocess_client.py  lidar.py  locations.py  mujoco_map.py  path_follower.py
robosim/usd_plugins/robosimCsd/: generatedSchema.usda  plugInfo.json  schema.usda
scripts/: collect_navigation_location.py  gen_protos.sh  generate_csd_comparison_outputs.py  install_habitat.sh  test_vacuum_base_drive.py  test_vacuum_go_to_pose.py  test_vacuum_lidar.py  test_vacuum_nav_stack.py  test_vacuum_navigate_location.py  test_vacuum_pose.py  test_vacuum_route.py  test_vacuum_sensor_avoid.py  test_vacuum_service_nav.py  test_vacuum_wheels.py
tests/: openusd_fixture_authoring.py  test_collect_navigation_location.py  test_core.py  test_csd_compiler.py  test_csd_mujoco_compiler.py  test_csd_realization.py  test_g1_dual_arm_backend.py  test_gazebo_backend.py  test_habitat_backend.py  test_joycon.py  test_lerobot_policy.py  test_lerobot_recorder.py  test_mujoco.py  test_mujoco_backend.py  test_mujoco_openusd_feasibility.py  test_navigation_grid.py  test_navigation_path_follower.py  test_openusd_backend_parity.py  test_openusd_csd_reader.py  test_openusd_csd_schema.py  test_openusd_csd_validation.py  test_policy_runner_cli.py  test_pybullet_backend.py  test_pybullet_csd_compiler.py  test_scripted_collect.py  test_server.py  test_servo_keyboard.py  test_simulation_service.py  test_teleop.py  test_thread_bound_backend_proxy.py
tests/fixtures/csd/: asset_registry_gazebo.json  asset_registry_mujoco.json  asset_registry_pybullet.json  franka_tabletop_multi_object.json  franka_tabletop_single_object.json  low_gravity_static_layout.json  object_inertial_contact.json  object_only_default_camera.json  object_only_static_and_dynamic.json  tabletop_rotated_surface_object.json  textured_scaled_object.json  unsupported_robot.json  visual_tabletop_regions.json
(+139 files in other folders)
