<?xml version="1.0"?>
<package format="3">
  <name>ipads_desc</name>
  <version>1.0.0</version>
  <description>
    <p>URDF Description package for LZ2.0.SLDASM_v14</p>
    <p>This package contains configuration data, 3D models and launch files
for LZ2.0.SLDASM_v14 robot</p>
  </description>
  <author>TODO</author>
  <maintainer email="TODO@email.com" />
  <license>BSD</license>
  
  <buildtool_depend>ament_cmake</buildtool_depend>

  <export>
      <build_type>ament_cmake</build_type>
  </export>

</package>